src/parts/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;

    font-family: sans-serif;
}

html.dark-mode {
    --navbar-background: #171717;
    --navbar-color: #ffffff;
    --navbar-height: 42px;
    --navbar-search-background: #333;
    --navbar-search-color: #ccc;
    --navbar-search-hover-background: #555;

    --main-background: #222;
    --main-color: #ffffff;
    --main-top-padding: 14px;
    --main-separator-color: #444444;
    --main-target-color: #333333;
    --main-code-color: #070707;
    --main-entity-name-color: #9090ff;
}

html.light-mode {
    --navbar-background: #eeeef5;
    --navbar-color: #000000;
    --navbar-height: 42px;
    --navbar-search-background: #9999aa;
    --navbar-search-color: #000000;
    --navbar-search-hover-background: #bbbbc4;

    --main-background: #ffffff;
    --main-color: #000000;
    --main-top-padding: 14;
    --main-separator-color: #cccccc;
    --main-target-color: #dddddd;
    --main-code-color: #e7e7ff;
    --main-entity-name-color: #070799;
}

html {
    --left-panel-width: 300px;
    --right-panel-width: 300px;
}

body {
    background-color: var(--main-background);
    color: var(--main-color);
}

navbar {
    min-height: var(--navbar-height);
    position: relative;
    display: grid;
    grid-template-columns: 50px 1fr 100px;
    grid-template-rows: auto;
    grid-template-areas: "logo searchbar links";

    background-color: var(--navbar-background);
    color: var(--navbar-color);

    z-index: 100;
    box-shadow: 0px -1px 2px 2px rgba(0, 0, 0, 0.2);
}

navbar .toggle-colors {
    height: 100%;
    margin-right: 20px;
    text-align: center;
    padding-top: 10px;
    outline: none;
    user-select: none;
}

navbar .toggle-colors:hover {
    cursor: pointer;
}

navbar .logo {
    grid-area: "logo";
    display: flex;
    align-items: center;
    justify-content: center;
}

navbar .searchbar {
    grid-area: "searchbar";

    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

navbar .searchbar .search-container {
    border: 1px solid var(--main-separator-color);
    border-radius: 2px;
    width: 60%;
    height: 80%;
    position: relative;
}

navbar .searchbar input {
    flex-grow: 1;

    font-size: 1rem;
    font-family: fira, monospace;
        
    outline: none;
    border: none;
    padding: 6px;
    display: block;
    width: 100%;
    border-radius: 2px;

    background-color: var(--navbar-search-background);
    color: var(--navbar-search-color);
    transition: all 400ms;
}

navbar .searchbar input::placeholder {
    color: var(--navbar-search-color);
}
    

navbar .searchbar button {
    width: 50px;
    height: 100%;

    background-color: var(--navbar-search-background);
    color: var(--navbar-search-color);
    transition: all 400ms;

    border: none;
}

navbar .searchbar .search-container:hover input,
navbar .searchbar .search-container:focus-within input
{
    background-color: var(--navbar-search-hover-background);
}

navbar .search-results {
    background: var(--navbar-background);

    display: block;
    position: absolute;
    z-index: 100;
    width: 100%;
    max-height: 400px;
    overflow-y: auto;
    padding: 0px;

    list-style: none;

    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
    border-bottom-right-radius: 8px;
    border-bottom-left-radius: 8px;
    display: none;
}

navbar .search-results li {
    padding: 4px;
    display: grid;
    grid-template-columns: max(100px) 1fr 1fr;
    grid-template-rows: auto;
    transition: all 200ms;
}

navbar .search-results li:hover {
    cursor: pointer;
    background-color: var(--navbar-search-background);
}

navbar .search-results li .search-result-badge {
    background-color: var(--navbar-color);
    color: var(--navbar-background);

    padding: 8px;
    border-radius: 4px;
    text-align: center;
}

navbar .search-results li .search-result-name {
    font-weight: 600;
    font-size: 1.2rem;
    font-family: fira, monospace;
    padding: 4px;
}

navbar .search-results li .search-result-package {
    text-align: right;
    padding: 4px;
}


navbar .links {
    grid-area: "links";
}


main {
    min-height: calc(100vh - var(--navbar-height));
    display: grid;
    grid-template-columns: var(--left-panel-width) 4px calc(100% - 4px - var(--left-panel-width) - var(--right-panel-width)) 4px var(--right-panel-width);
    grid-template-rows: auto;
    grid-template-areas: "project main symbols";
    position: relative;
}

main > .divider {
    background-color: var(--main-separator-color);
    cursor: col-resize;
}

main > *:not(.divider) {
    padding-top: var(--main-top-padding);
    padding-left: 4px;
}

main .package-sidebar {
    grid-area: "project";
    position: sticky;
    top: 0px;
    height: 100vh;
    overflow-y: auto;

    background-color: var(--navbar-background);
    text-decoration: none;
}

main .package-sidebar h2 {
    padding-left: 8px;
    padding-bottom: 4px;
}

main .package-sidebar .item {
    font-size: 1.2rem;
    padding-left: 8px;
    text-decoration: none !important;
    font-family: fira, monospace;
}

main .package-sidebar .item.active {
    background-color: var(--main-background);
}

main .package-sidebar a {
    color: var(--main-color);
    text-decoration: none !important;
}

main .package-sidebar a .item:hover {
    background-color: var(--main-separator-color);
}

main .package-sidebar .container {
    position: relative;
    left: 20px;
    font-size: 1.2rem;
    width: calc(100% - 20px);
}

main .main-view {
    grid-area: "main";
}

main .main-view h2 {
    padding-left: 8px;
}

main .main-view > .package-entry {
    margin: 8px;
    padding: 16px;
}

@keyframes flash {
    from {
        background-color: var(--main-target-color);
    }

    to {
        background-color: inherit;
    }
}

main .main-view *:target {
    animation: flash 3s;
}

/* main .main-view .package-entry:not(:first-child) {
    border-top: 1px solid var(--main-separator-color);
} */

main .main-view .package-entry .entry-header {
    display: flex;
    justify-content: space-between;
}

main .main-view .package-entry .entry-header .visibility-badge {
    color: var(--main-background);
    background-color: var(--main-color);
    border-radius: 2px;
    padding: 4px;
    margin-right: 4px;
    text-transform: lowercase;
}

main .main-view .package-entry .entry-header .entry-source {
    background-color: var(--navbar-search-background);
    border-radius: 2px;
    padding: 4px;
}

main .main-view .package-entry .entry-header .entry-source a {
    color: var(--navbar-search-color);
}

main .main-view .package-entry .description-container {
    margin-top: 10px;
    padding-left: 4px;
}

main .main-view .package-entry .description-container p {
    margin-top: 10px;
}

main .main-view .package-entry .description-container pre,
main .main-view .package-entry .description-container pre code
{
    background-color: var(--main-code-color);
}

main .main-view .package-entry .description-container *:not(pre) code
{
    padding: 2px;
    background-color: var(--main-code-color);
    border-radius: 2px;
    font-family: fira, monospace;
}

main .main-view .package-entry .description-container pre {
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
}

main .main-view .entry-name {
    font-family: fira, monospace;
    font-weight: 700;
    font-size: 1.2rem;
}

main .main-view .spacer {
    margin-top: 24px;
    border-top: 1px solid var(--main-separator-color);
}

main .main-view .method-header {
    margin-top: 20px;
    padding: 4px;
    font-weight: 600;
    font-size: 1.1rem;
    width: 100%;
    transition: all 200ms;
}

main .main-view .method-header:hover {
    cursor: pointer;
    background-color: var(--main-separator-color);
}

main .main-view .method-header + * {
    padding: 16px 0 16px 16px;
    /* border-left: 8px solid var(--main-separator-color); */
}

main .main-view .method-header + * > *:not(:first-child) {
    /* border-top: 1px solid var(--main-separator-color); */
    margin: 8px 0;
    padding: 8px 0;
}

main .main-view .accordion-toggle + * {
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.2s ease-in-out;
    transition: opacity 0.05s ease-in-out;
}

main .main-view .accordion-toggle:not(.active) + * {
    opacity: 0;
}

main .main-view pre {
    margin-top: 10px;
    margin-right: 4px;
    padding: 4px;

    border-radius: 2px;
    /* box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2); */
    font-weight: 700;

    overflow-x: auto;
}

main .main-view .package-entry a {
    text-decoration: none;
}

main .main-view .package-entry a.entity-name {
    text-decoration: underline;
    color: var(--main-entity-name-color);
}

main .main-view pre * {
    font-family: fira, monospace;
}

main .main-view .source-definition {
    position: relative;
}

main .main-view .source-definition .source-link {
    position: absolute;
    top: 0;
    right: 0;
    font-size: 0.7rem;

    opacity: 0;
    transition: opacity 100ms;
    background-color: var(--navbar-search-background);
    color: black;

    padding: 4px;
    border-radius: 4px;
}

main .main-view .source-definition:hover .source-link {
    opacity: 100%;
}

main .main-view .source-definition .source-link a {
    color: black;
    text-decoration: none;
}

main .symbol-sidebar {
    grid-area: "symbols";
    background-color: var(--navbar-background);
    text-decoration: none;
    overflow-x: hidden;
    overflow-y: auto;
    position: sticky;
    top: 0px;
    height: 100vh;
}

main .symbol-sidebar h2 {
    padding-left: 8px;
    padding-bottom: 4px;
}

main .symbol-sidebar a {
    text-decoration: none;
    color: var(--main-color);
}

main .symbol-sidebar a * {
    text-decoration: none;
    font-family: fira, monospace;
}

main .symbol-sidebar a:visited .symbol-link {
    text-decoration: none;
    color: var(--main-color);
    font-family: fira, monospace;
}

main .symbol-sidebar a .symbol-link {
    /* transition: all 400ms; */
}

main .symbol-sidebar a:hover .symbol-link {
    background-color: var(--main-separator-color);
}


::-webkit-scrollbar {
    width: 2px;
}
 
::-webkit-scrollbar-thumb {
    background-color: var(--main-separator-color);
}

main {
    border-bottom: 1px solid var(--main-separator-color);
}

.footer-container {
    display: flex;
    flex-direction: row;
}

.footer-container a {
    display: block;
    padding: 2px 0;
    text-decoration: none;
}

.footer-container > * {
    flex-basis: 0;
}

footer.container.dark {
    margin: 0 auto;
    max-width: 1200px;
    padding: 20px 0;
}

@font-face {
    font-family: fira;
    src: url(FiraCode-Regular.woff);
}

